<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>hermes</name>
 <version>0.0.1</version>
 <description>A demo app for the blog</description>
 <maintainer email="ChienMing.Lin@itri.org.tw">Chien-Ming Lin</maintainer>
 <license>Apache License 2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <buildtool_depend>rosidl_default_generators</buildtool_depend>

 <depend>rclcpp</depend>
 <depend>rclcpp_action</depend>
 <depend>std_msgs</depend>
 <depend>universal_interface</depend>

 <depend>qtbase5-dev</depend>
 <depend>qt5-qmake</depend>
 <member_of_group>rosidl_interface_packages</member_of_group>


 <export>
  <build_type>ament_cmake</build_type>
 </export>
</package>
