<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>universal_client</name>
  <version>0.6.2</version>
  <description>A minimal service client which adds two numbers</description>
  <maintainer email="ChienMing.Lin@itri.org.tw">Chien-Ming Lin</maintainer>
  <license>Apache License 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>universal_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

